--- a/produtos.html
+++ b/produtos.html
@@ -12,10 +12,12 @@
       <div class="menu-toggle"><span></span><span></span><span></span></div>
       <nav class="nav">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="#sobre">Sobre Nós</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./produtos.html">Produtos</a></li>
+          <li><a href="./sobre.html">Sobre Nós</a></li>
           <li><a href="#contato">Contato</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
+          <li><a href="./formulario.html">Formulario</a></li>
         </ul>
       </nav>
     </header>
@@ -56,6 +58,7 @@
               <div class="card-price">€19.99</div>
             </div>
           </div>
+
           <div class="card">
             <div class="card-image">
               <img src="./fotos/EXEMPLARES/3d_AF-RUSTICA.png" alt="Produto 1" />
@@ -175,6 +178,45 @@
             </div>
           </div>
           <!-- Adicione mais cards conforme necessário -->
+        </div>
+      </div>
+    </section>
+
+    <section id="contato">
+      <div class="content">
+        <div class="text">
+          <h2>Contato</h2>
+          <p>Email: contato@meusite.com</p>
+          <p>Telefone: (00) 1234-5678</p>
+          <div class="social-media">
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              rel="noopener"
+              class="social-icon"
+            >
+              <img src="./fotos/facebook_2504903.png" alt="Facebook" />
+            </a>
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              rel="noopener"
+              class="social-icon"
+            >
+              <img src="./fotos/instagram_2111463.png" alt="Instagram" />
+            </a>
+            <a
+              href="https://wa.me/0012345678"
+              target="_blank"
+              rel="noopener"
+              class="social-icon"
+            >
+              <img src="./fotos/whatsapp_2504957.png" alt="WhatsApp" />
+            </a>
+          </div>
+        </div>
+        <div class="image">
+          <img src="./fotos/ebook_11899176.png" alt="Contato" />
         </div>
       </div>
     </section>
