--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
       </div>
     </section>
 
+    <!-- Novo Título, Texto e Botão -->
+    <section id="informacoes">
+      <div class="container">
+        <h2>Saiba Mais Sobre Nossos Projetos</h2>
+        <p>
+          Para mais informações sobre nossos produtos e serviços, entre em
+          contato conosco.
+        </p>
+        <div class="cta-btn2-container">
+          <a href="./formulario.html" class="cta-btn2">Entre em Contato</a>
+        </div>
+      </div>
+    </section>
+
     <section id="contato">
       <div class="content">
         <div class="text">
