--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       <div class="video-overlay">
         <h1>Sua Frase Aqui</h1>
         <p>Algum texto descritivo adicional aqui para complementar o título.</p>
-        <a href="formulario.html" class="cta-btn1">Orçamento</a>
       </div>
     </div>
 
@@ -81,7 +80,7 @@
     </section>
 
     <div class="cta-btn2-container">
-      <a href="./produtos.html" class="cta-btn2">Ver Mais Produtos</a>
+      <a href="./produtos.html" class="cta-btn2">Ver Mais</a>
     </div>
 
     <section id="obras">
