--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               class="static-image"
             />
             <img
-              src="./fotos/OBRA 2 - ANÇÃ/direita.jpg"
+              src="./fotos/OBRA 2 - ANÇÃ/centro.jpg"
               alt="Imagem 1"
               class="static-image"
             />
