--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <section id="home">
       <div class="content">
         <div class="carousel">
+          <div class="text-content">
+            <h1>Nossos Produtos</h1>
           <img
             src="./fotos/sem fundo 1.png"
             alt="Imagem 3"
@@ -80,7 +82,6 @@
           />
         </div>
         <div class="text-content">
-          <h1>Nossos Produtos</h1>
           <p>
             Descubra os nossos produtos e serviços. Cada item foi criado com
             cuidado e atenção aos detalhes para oferecer a melhor qualidade.
@@ -191,6 +192,13 @@
             </a>
           </div>
         </div>
+        <!-- Início do mapa -->
+    <div class="map-thumbnail">
+      <a href="https://maps.app.goo.gl/nMkZYGFSpxXS2Ntb9" target="_blank" rel="noopener">
+        <img src="./fotos/maps.jpeg" alt="Localização da nossa empresa" />
+      </a>
+    </div>
+    <!-- Fim do mapa -->
       </div>
     </section>
 
