--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="overlay">
           <h2>Nossa Historia</h2>
 
-          <a href="./sobre.html" class="btn-primary">Sobre Nós</a>
+          <a href="./sobre.html" class="cta-btn2">Sobre Nós</a>
         </div>
         <img src="./fotos/DSC08126-2.jpg" alt="Linha Premium" />
       </div>
